--- a/package.json
+++ b/package.json
@@ -22,5 +22,8 @@
   "homepage": "https://github.com/lynnic26/utils#readme",
   "devDependencies": {
     "chai": "^4.0.2"
+  },
+  "dependencies": {
+    "lodash": "^4.17.4"
   }
 }
