--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "mocha --reporter spec test/",
-    "lint": "eslint lib"
+    "lint": "eslint ./"
   },
   "repository": {
     "type": "git",
