--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
   "homepage": "https://github.com/lynnic26/utils#readme",
   "devDependencies": {
     "chai": "^4.0.2",
-    "mocha": "^3.5.2"
+    "mocha": "^3.5.2",
+    "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
     "eslint": "^4.6.1",
