--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "commitmsg": "validate-commit-msg",
     "test": "mocha --reporter spec test/",
     "lint": "eslint ./"
   },
@@ -23,6 +24,7 @@
   "homepage": "https://github.com/lynnic26/utils#readme",
   "devDependencies": {
     "chai": "^4.0.2",
+    "husky": "^0.14.3",
     "mocha": "^3.5.2",
     "validate-commit-msg": "^2.14.0"
   },
