--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
   "homepage": "https://github.com/lynnic26/utils#readme",
   "devDependencies": {
     "chai": "^4.0.2",
+    "eslint-config-standard": "^10.2.1",
+    "eslint-plugin-import": "^2.7.0",
+    "eslint-plugin-node": "^5.1.1",
+    "eslint-plugin-promise": "^3.5.0",
+    "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
     "mocha": "^3.5.2",
     "validate-commit-msg": "^2.14.0"
