--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
   },
   "dependencies": {
     "eslint": "^4.6.1",
-    "lodash": "4.17.4"
+    "lodash": "4.17.4",
+    "webpack": "3.6.0"
   }
 }
