--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "homepage": "https://github.com/lynnic26/utils#readme",
   "devDependencies": {
     "chai": "^4.0.2",
+    "eslint": "^4.6.1",
     "eslint-config-standard": "^10.2.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-node": "^5.1.1",
@@ -34,7 +35,10 @@
     "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
-    "eslint": "^4.6.1",
+    "babel-core": "6.26.0",
+    "babel-loader": "7.1.2",
+    "babel-polyfill": "6.26.0",
+    "babel-preset-env": "1.6.0",
     "lodash": "4.17.4",
     "webpack": "3.6.0"
   }
