--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "clean": "rimraf dist",
     "commitmsg": "validate-commit-msg",
     "test": "mocha --reporter spec test/",
     "lint": "eslint --ext .js ./"
@@ -32,6 +33,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "husky": "^0.14.3",
     "mocha": "^3.5.2",
+    "rimraf": "2.6.2",
     "validate-commit-msg": "^2.14.0"
   },
   "dependencies": {
