--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "bootstrap": "npm install -d --registry=https://registry.npm.taobao.org --disturl=https://npm.taobao.org/dist --sass-binary-site=http://npm.taobao.org/mirrors/node-sass",
     "clean": "rimraf dist",
     "commitmsg": "validate-commit-msg",
     "test": "mocha --reporter spec test/",
